# vtr3

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.CPU  Dockerfile.GPU  Dockerfile.jetson  Dockerfile_89  Dockerfile_main  Dockerfile_temp  Jenkinsfile  LICENSE.md  README.md  compile_commands.json  example_log.txt  requirements.txt  ros1_instructions.md
drivers/honeycomb/hc/: CMakeLists.txt  package.xml  setup.bash
drivers/honeycomb/hc/cfg/: HcNode.cfg
drivers/honeycomb/hc/cmake/: FindHoneycomb.cmake
drivers/honeycomb/hc/rviz/: hc.rviz
drivers/honeycomb/hc/src/: hc_node.cc  pitch_table_utils.cc  scan_image_producer.cc
drivers/ros2/asrl__gamepad_control/: package.xml
drivers/ros2/asrl__gamepad_control/launch/: clearpath_gamepad.launch  gamepad_only.launch  gamepad_slow_js1.xml  hydro_gamepad_only.launch  logitech_gamepad.launch  pioneer_gamepad.launch  roomba_gamepad.launch  xbox_gamepad.launch
drivers/ros2/asrl__gamepad_control/src/: gamepad_scalar_node.cpp
extra/src/electric_sheep/: CMakeLists.txt
extra/src/electric_sheep/scripts/: alignment.py  data_subscriber.py
extra/src/electric_sheep/src/: data_player.cpp  pc_replay.cpp
extra/src/vtr_bumblebee_xb3/: CMakeLists.txt  README.md  package.xml
extra/src/vtr_bumblebee_xb3/param/: XB3.yaml
extra/src/vtr_bumblebee_xb3/src/: bumblebee_main.cpp  bumblebee_xb3.cpp  camera1394.cpp  xb3_calibration.cpp  xb3_recorder.cpp  xb3_replay.cpp
extra/src/vtr_storage_examples/: CMakeLists.txt  package.xml
extra/src/vtr_storage_examples/src/: sample_node_4.cpp  sample_node_5.cpp  sample_node_6.cpp
extra/src/vtr_testing_boreas/: CMakeLists.txt  package.xml
extra/src/vtr_testing_boreas/config/: boreas.yaml  odometry.yaml
extra/src/vtr_testing_boreas/launch/: dynamic_detection.launch.py  intra_exp_merging.launch.py  localization_ros.launch.py  odometry_ros.launch.py
extra/src/vtr_testing_boreas/script/: boreas_player.py  commands.sh  obelisk.sh
extra/src/vtr_testing_boreas/src/: dynamic_detection.cpp  inter_exp_merging.cpp  intra_exp_merging.cpp  localization_direct.cpp  localization_ros.cpp  odometry_direct.cpp  odometry_ros.cpp
extra/src/vtr_testing_boreas/tmuxp/: odometry_ros.yaml
extra/src/vtr_testing_camera/: CMakeLists.txt
extra/src/vtr_testing_camera/launch/: odometry.launch.py
extra/src/vtr_testing_camera/src/: localization.cpp  odometry.cpp
extra/src/vtr_testing_honeycomb/: CMakeLists.txt  package.xml
extra/src/vtr_testing_honeycomb/config/: honeycomb.yaml
extra/src/vtr_testing_honeycomb/script/: commands.sh  obelisk.sh
extra/src/vtr_testing_honeycomb/src/: intra_exp_merging.cpp  localization_direct.cpp  odometry_direct.cpp
extra/src/vtr_testing_lidar/: CMakeLists.txt  README.md
extra/src/vtr_testing_lidar/launch/: localization.launch.py  odometry.launch.py
extra/src/vtr_testing_lidar/src/: localization.cpp  odometry.cpp
extra/src/vtr_testing_lidar/tmuxp/: vtr_testing_lidar.yaml
extra/src/vtr_testing_tactic/: CMakeLists.txt  package.xml
extra/src/vtr_testing_tactic/config/: honeycomb.yaml
extra/src/vtr_testing_tactic/src/: change_detection.cpp  intra_exp_merging.cpp  localization_direct.cpp  odometry_direct.cpp
main/src/vtr_common/: CMakeLists.txt  README.md  package.xml  vtr_include.cmake
main/src/vtr_documentation/: CMakeLists.txt  Doxyfile.in  README.md  mainpage.md  package.xml
main/src/vtr_documentation/src/: example.cpp
main/src/vtr_documentation/tutorial/: example.md
main/src/vtr_lgmath_extensions/: CMakeLists.txt  README.md  package.xml
main/src/vtr_lgmath_extensions/src/: conversions.cpp
src/vtr_interface/: CMakeLists.txt  README.md  package.xml
src/vtr_interface/src/vtr_interface/: __init__.py  socket_server.py  ui_server.py
src/vtr_interface/vtr_frontend/: README.md
src/vtr_interface/vtr_frontend/vtr-ui/: package.json
src/vtr_navigation/: CMakeLists.txt  README.md  package.xml  setup.bash
src/vtr_navigation/launch/: navigator.launch  vtr_pt.launch  vtr_slim.launch
src/vtr_navigation/param/: .gitignore  README.md
src/vtr_navigation/param/husky/: tactic.yaml
src/vtr_navigation/param/lancaster/: tactic.yaml
src/vtr_navigation/param/locations/: ethier.yaml  utias.yaml
src/vtr_navigation/param/m600/: tactic.yaml
src/vtr_navigation/param/quick_vo/: grizzly_vertex_test.yaml
src/vtr_navigation/param/scenarios/: 2016_single_exp.yaml  2016_sudbury.yaml  grizzly_demo.yaml  grizzly_kai.yaml  headless-nodata.yaml  husky_debug.yaml  lancaster_demo.yaml  lancaster_headless_test.yaml  lancaster_nav_orb.yaml  lancaster_nav_surf.yaml  lpb_grizzly.yaml  m600.yaml  m600_backyard.yaml  m600_bench.yaml  m600_montreal.yaml  mikezero_loc.yaml  mikezero_vo.yaml  playback.yaml  playback_lancaster.yaml
src/vtr_navigation/param/trex/: tactic.yaml
src/vtr_navigation/src/: caches.cpp  navigator.cpp  visualize.cpp
src/vtr_navigation/src/assemblies/: base_assembly.cpp  quick_vo_assembly.cpp
src/vtr_navigation/src/factories/: assembly_factory.cpp  module_factory.cpp  ros_module_factory.cpp  ros_tactic_factory.cpp
src/vtr_navigation/src/memory/: live_memory_manager.cpp
src/vtr_navigation/src/modules/: base_module.cpp
src/vtr_navigation/src/pipelines/: branch_pipeline.cpp
src/vtr_navigation/src/tactics/: basic_tactic.cpp  (+1 more)
src/vtr_path_planning/: package.xml
src/vtr_path_planning/src/: time_delta_planner.cpp
src/vtr_planning/: CMakeLists.txt  package.xml  setup.py
src/vtr_planning/action/: Mission.action
src/vtr_planning/msg/: MissionStatus.msg
src/vtr_planning/src/: event.cpp  ros_callbacks.cpp  ros_mission_server.cpp  state_machine.cpp
src/vtr_planning/srv/: CloseLoop.srv  GoalModify.srv  Overlay.srv
src/vtr_planning/test/: mission_planning_tests.cpp  state_machine_tests.cpp
src/vtr_steam_extensions/: CMakeLists.txt  package.xml
src/vtr_testing/: CMakeLists.txt  README.md  offline_tool_tutorial.md  package.xml  tutorial.md
src/vtr_testing/launch/: module_loc.launch  module_vo.launch
src/vtr_vision/: CMakeLists.txt  package.xml
src/vtr_vision/src/: CMakeLists.txt  image_conversions.cpp
(+3922 files in other folders)
