<?xml version="1.0"?>
<package format="2">
  <!--REQUIRED HEADER-->
  <name>vtr_interface</name>
  <description>vtr_interface</description>
  <version>0.0.0</version>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->  
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!--BUILD TOOL DEPENDENCIES-->
  <buildtool_depend>catkin</buildtool_depend>


  <!--BUILD DEPENDENCIES-->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>  
  <build_depend>asrl__messages</build_depend>
  <build_depend>asrl__common</build_depend>
  <build_depend>asrl__control__path_tracker</build_depend>
  <build_depend>asrl__safety_monitor</build_depend>
  <build_depend>robochunk_msgs</build_depend>


  <!--RUNTIME DEPENDENCIES-->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>  
  <exec_depend>asrl__messages</exec_depend>
  <exec_depend>asrl__common</exec_depend>
  <exec_depend>asrl__control__path_tracker</exec_depend>
  <exec_depend>asrl__safety_monitor</exec_depend>
  <exec_depend>robochunk_msgs</exec_depend>

  <!--TEST DEPENDENCIES-->
  <!-- test_depend>asrl__common__library</test_depend -->
</package>
