<?xml version="1.0"?>
<package format="2">
  <name>vtr_navigation</name>
  <version>0.0.0</version>
  <description>The vtr_navigation package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/vtr_documentation</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!--BUILD DEPENDENCIES-->
  <!-- <build_depend>asrl__interface</build_depend>
  <build_depend>asrl__messages</build_depend>
  <build_depend>asrl__planning</build_depend>
  <build_depend>asrl__terrain_assessment</build_depend> -->
  <build_depend>asrl__path_tracker</build_depend>
  <build_depend>asrl__pose_graph</build_depend>
  <build_depend>asrl__vision</build_depend>
  <build_depend>asrl__common</build_depend>
  <build_depend>babelfish_robochunk_translator</build_depend>
  <build_depend>robochunk_base</build_depend>
  <build_depend>robochunk_msgs</build_depend>
  <build_depend>robochunk_util</build_depend>
  <build_depend>robochunk_comms</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!--RUNTIME DEPENDENCIES-->
  <!-- <exec_depend>asrl__interface</exec_depend>
  <exec_depend>asrl__messages</exec_depend>
  <exec_depend>asrl__planning</exec_depend>
  <exec_depend>asrl__terrain_assessment</exec_depend> -->
  <exec_depend>asrl__path_tracker</exec_depend>
  <exec_depend>asrl__common</exec_depend>
  <exec_depend>asrl__vision</exec_depend>
  <exec_depend>asrl__pose_graph</exec_depend>
  <exec_depend>babelfish_robochunk_translator</exec_depend>
  <exec_depend>robochunk_base</exec_depend>
  <exec_depend>robochunk_msgs</exec_depend>
  <exec_depend>robochunk_util</exec_depend>
  <exec_depend>robochunk_comms</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
