<?xml version="1.0"?>
<package>
  <name>vtr_path_planning</name>
  <description>The path planning package</description>
  <version>0.0.0</version>
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>
  <license>BSD</license>

  <!--BUILD TOOL DEPENDENCIES-->
  <buildtool_depend>catkin</buildtool_depend>

  <!--BUILD DEPENDENCIES-->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>asrl__planning</build_depend>
  <build_depend>asrl__pose_graph</build_depend>
  <build_depend>asrl__messages</build_depend>
  <build_depend>asrl__common</build_depend>
  <build_depend>asrl__interface</build_depend>
  <build_depend>babelfish_robochunk_translator</build_depend>
  <build_depend>robochunk_base</build_depend>
  <build_depend>robochunk_msgs</build_depend>
  <build_depend>robochunk_util</build_depend>
  <build_depend>robochunk_comms</build_depend>

  <!--RUNTIME DEPENDENCIES-->
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>asrl__planning</exec_depend>
  <exec_depend>asrl__pose_graph</exec_depend>
  <exec_depend>asrl__messages</exec_depend>
  <exec_depend>asrl__common</exec_depend>
  <exec_depend>asrl__interface</exec_depend>
  <exec_depend>babelfish_robochunk_translator</exec_depend>
  <exec_depend>robochunk_base</exec_depend>
  <exec_depend>robochunk_msgs</exec_depend>
  <exec_depend>robochunk_util</exec_depend>
  <exec_depend>robochunk_comms</exec_depend>

  <!--TEST DEPENDENCIES-->
  <!-- test_depend>asrl__common__library</test_depend -->
</package>
