<?xml version="1.0"?>
<package>
  <name>vtr_planning</name>
  <description>The mission and path planning package</description>
  <version>0.0.0</version>
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>
  <license>BSD</license>

  <!--BUILD TOOL DEPENDENCIES-->
  <buildtool_depend>catkin</buildtool_depend>

  <!--BUILD DEPENDENCIES-->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>asrl__planning</build_depend>
  <build_depend>asrl__pose_graph</build_depend>
  <build_depend>asrl__messages</build_depend>
  <build_depend>asrl__common</build_depend>
  <build_depend>asrl__interface</build_depend>
  <build_depend>babelfish_robochunk_translator</build_depend>
  <build_depend>robochunk_base</build_depend>
  <build_depend>robochunk_msgs</build_depend>
  <build_depend>robochunk_util</build_depend>
  <build_depend>robochunk_comms</build_depend>

  <!--RUNTIME DEPENDENCIES-->
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>asrl__planning</run_depend>
  <run_depend>asrl__pose_graph</run_depend>
  <run_depend>asrl__messages</run_depend>
  <run_depend>asrl__common</run_depend>
  <run_depend>asrl__interface</run_depend>
  <run_depend>babelfish_robochunk_translator</run_depend>
  <run_depend>robochunk_base</run_depend>
  <run_depend>robochunk_msgs</run_depend>
  <run_depend>robochunk_util</run_depend>
  <run_depend>robochunk_comms</run_depend>

  <!--TEST DEPENDENCIES-->
  <!-- test_depend>asrl__common__library</test_depend -->
</package>
