<package>
  <!--REQUIRED HEADER-->
  <name>vtr_steam_extensions</name>
  <description>
    Extensions to the base steam library
  </description>
  <version>1.0.0</version>
  <maintainer email="ben.congram@robotics.utias.utoronto.ca">Benjamin Congram</maintainer>
  <license>BSD</license>

  <!--BUILD TOOL DEPENDENCIES-->
  <buildtool_depend>catkin</buildtool_depend>

  <!--BUILD DEPENDENCIES-->
  <build_depend>asrl__common</build_depend>
  <build_depend>vtr_vision</build_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>steam</build_depend>
  <build_depend>robochunk_base</build_depend>
  <build_depend>robochunk_msgs</build_depend>
  <build_depend>robochunk_util</build_depend>

  <!--RUNTIME DEPENDENCIES-->
  <run_depend>asrl__common</run_depend>
  <run_depend>vtr_vision</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>steam</run_depend>
  <run_depend>robochunk_base</run_depend>
  <run_depend>robochunk_msgs</run_depend>
  <run_depend>robochunk_util</run_depend>

  <!--TEST DEPENDENCIES-->
  <!-- test_depend>asrl__common__library</test_depend -->
</package>
