<?xml version="1.0"?>
<package format="2">
  <name>vtr_vision</name>
  <version>0.0.0</version>
  <description>The vtr_vision package</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cheney.wu@mail.utoronto.ca">yuchen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!--BUILD TOOL DEPENDENCIES-->
  <buildtool_depend>catkin</buildtool_depend>


  <!--BUILD DEPENDENCIES-->
  <build_depend>asrl__common</build_depend>
  <build_depend>asrl__messages</build_depend>
  <build_depend>asrl__vision</build_depend>
  <build_depend>robochunk_base</build_depend>
  <build_depend>robochunk_msgs</build_depend>
  <build_depend>robochunk_util</build_depend>
  <build_depend>libelas</build_depend>
  <build_depend>roscpp</build_depend>

  <!--RUNTIME DEPENDENCIES-->
  <exec_depend>asrl__common</exec_depend>
  <exec_depend>asrl__messages</exec_depend>
  <exec_depend>asrl__vision</exec_depend>
  <exec_depend>robochunk_base</exec_depend>
  <exec_depend>robochunk_msgs</exec_depend>
  <exec_depend>robochunk_util</exec_depend>
  <exec_depend>libelas</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
