<?xml version="1.0"?>
<package format="2">
  <name>hc</name>
  <version>0.0.1</version>
  <description>The hc package is a ROS driver for the Waymo Honeycomb lidar</description>
  <maintainer email="lidar-support@waymo.com">Waymo Lidar Support</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
